--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Teach English</title>
 </head>
 <body>
-    
+    <div id="root"></div>
+    <!-- <textarea class="textarea" onchange=onEnglish value=hello placeholder="Your word!"></textarea> -->
     <script src="js/index.js" ></script>
 </body>
 </html>
