--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Teach English</title>
 </head>
 <body>
+    <button onclick="f1()">Let learned words</button>
     <div id="root"></div>
+    <div id="root2"></div>
     <!-- <textarea class="textarea" onchange=onEnglish value=hello placeholder="Your word!"></textarea> -->
     <script src="js/index.js" ></script>
 </body>
